--- a/Data_620_Week_3_Assignment.ipynb
+++ b/Data_620_Week_3_Assignment.ipynb
@@ -6,7 +6,7 @@
       "name": "Data 620 Week 3 Assignment.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMwjpgLLismprbgqtxiTXEA",
+      "authorship_tag": "ABX9TyNJG+N3cMfx5zeNcJq04I20",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "\r\n",
         "# Introduction \r\n",
         "\r\n",
-        "This week's assignment is to work ith graph data. "
+        "This week's assignment is to work with graph data. "
       ]
     },
     {
