--- a/Data_620_Week_3_Assignment.ipynb
+++ b/Data_620_Week_3_Assignment.ipynb
@@ -6,7 +6,7 @@
       "name": "Data 620 Week 3 Assignment.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJG+N3cMfx5zeNcJq04I20",
+      "authorship_tag": "ABX9TyPfibqfjCgIjUbTPyac+Zgo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -214,7 +214,7 @@
         "id": "Nn4FYnj9yZo1"
       },
       "source": [
-        "Here is another grapg using the `networkx spring_layout` function."
+        "Here is another graph using the `networkx spring_layout` function."
       ]
     },
     {
